Challenge Error Handling: Solve Task 1 and 2